flexbox prevents jumping icons

--- a/_sass/overrides.sass
+++ b/_sass/overrides.sass
@@ -4,17 +4,21 @@ a
 
 .site-footer
     .social-icon
-        display: inline-block
+        display: inline-flex
+        flex-direction: column
+        justify-content: center
         height: 32px
         width: 32px
-        line-height: 32px
+        padding: 0
+        margin: 0 4px
+        border-radius: 16px
         font-size: 10px
         color: white
         background-color: $accent-color
-        margin: 0 4px
-        border: 4px solid $accent-color
-        border-radius: 16px
 
         &:hover
             background-color: $hover-color
             border-color: $hover-color
+
+        svg
+            margin: 0 auto
